--- a/Exercise1_09/logoutput/html/hello.html
+++ b/Exercise1_09/logoutput/html/hello.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <body>
-            <h1>Hello world !</h1>
+            <h1>Hello hello world !</h1>
         </body>
     </head>
 </html>
